@@ -23,9 +23,6 @@
   <repository type="cvs" name="portland.freedesktop.org"
       cvsroot=":pserver:anoncvs@anoncvs.freedesktop.org:/cvs/portland"
       password=""/>
-  <repository type="cvs" name="gnome.org"
-      cvsroot=":pserver:anonymous@anoncvs.gnome.org:/cvs/gnome"
-      password=""/>
 
   <repository type="git" name="git.freedesktop.org"
       href="git://anongit.freedesktop.org/git/"/>
