@@ -2,9 +2,8 @@
 <?xml-stylesheet type="text/xsl" href="moduleset.xsl"?>
 <!-- vim:set ts=2 expandtab: -->
 <moduleset>
-  <repository type="cvs" name="gnome.org" default="yes"
-      cvsroot=":pserver:anonymous@anoncvs.gnome.org:/cvs/gnome"
-      password=""/>
+  <repository type="svn" name="svn.gnome.org" default="yes"
+      href="http://svn.gnome.org/svn/"/>
   <repository type="cvs" name="cairo.freedesktop.org"
       cvsroot=":pserver:anoncvs@anoncvs.freedesktop.org:/cvs/cairo"
       password=""/>
@@ -139,7 +138,7 @@
     <branch/>
   </autotools>
   <autotools id="libxml2">
-    <branch module="gnome-xml" checkoutdir="libxml2"/>
+    <branch/>
   </autotools>
   <autotools id="libxslt">
     <branch/>
@@ -2068,7 +2067,7 @@
     </dependencies>
   </autotools>
   <autotools id="NetworkManager">
-    <branch repo="gnome.org"/>
+    <branch/>
     <dependencies>
       <dep package="dbus"/>
     </dependencies>
