@@ -1,5 +1,17 @@
 2007-01-02  Mark McLoughlin  <mark@skynet.ie>
 
+	* jhbuild/versioncontrol/svn.py: add a little hack so
+	that if no branch or tag is mentioned in the module name,
+	we checkout the trunk to an appropriate directory
+	
+	* modulesets/gnome-2.18.modules: add the svn.gnome.org
+	repo and fix a couple of branch defs.
+	
+	* modulesets/freedesktop-2.18.modules: remove the unused
+	gnome.org cvsroot from here.
+
+2007-01-02  Mark McLoughlin  <mark@skynet.ie>
+
 	* jhbuild/versioncontrol/svn.py: fix minor buglet in
 	SubversionRepository.branch()
 
